Add aria hidden attr to maps

--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
                 </ul>
             </div>
             <div class="col-md">
-                <div id="map" aria-label="Map of Springfield IL" alt="Google Map image of Springfield IL">
+                <div id="map" aria-hidden="true">
                 </div>
             </div>
         </div>
