--- a/templates/order.html
+++ b/templates/order.html
@@ -11,7 +11,7 @@
             {% for item in items %}
             <div class="row">
                 <div class="col-md-2 col-sm-12">
-                    <img class="rounded" src="{{item.food_image.url}}" width="150" height="125" alt="Picture for food item {{ item }}"/>
+                    <img class="rounded img-fluid" src="{{item.food_image.url}}" alt="Picture for food item {{ item }}"/>
                 </div>
                 <div class="col-md-8 col-sm-12">
                     <div class="flex-row">
