update src path for images

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,13 +13,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/static/images/spuds.jpg" class="d-block w-100 rounded" alt="uncooked french fries">
+            <img src="{% static 'images/spuds.jpg' %}" class="d-block w-100 rounded" alt="uncooked french fries">
           </div>
           <div class="carousel-item">
-            <img src="/static/images/cooking.jpeg" class="d-block w-100 rounded" alt="cooking french fries">
+            <img src="{% static 'images/cooking.jpeg' %}" class="d-block w-100 rounded" alt="cooking french fries">
           </div>
           <div class="carousel-item">
-            <img src="/static/images/seasoning.jpg" class="d-block w-100 rounded" alt="seasoning french fries">
+            <img src="{% static 'images/seasoning.jpg %}" class="d-block w-100 rounded" alt="seasoning french fries">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselAboutIndicators" data-bs-slide="prev">
