--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,7 @@
 
 <!--about page content-->
 {% block content %}
+{% load static %}
 <div class="container p-5">
     <h1>About Us</h1>
     <!--About Us Images-->
@@ -19,7 +20,7 @@
             <img src="{% static 'images/cooking.jpeg' %}" class="d-block w-100 rounded" alt="cooking french fries">
           </div>
           <div class="carousel-item">
-            <img src="{% static 'images/seasoning.jpg %}" class="d-block w-100 rounded" alt="seasoning french fries">
+            <img src="{% static 'images/seasoning.jpg' %}" class="d-block w-100 rounded" alt="seasoning french fries">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselAboutIndicators" data-bs-slide="prev">
