--- a/templates/about.html
+++ b/templates/about.html
@@ -33,11 +33,11 @@
         </button>
       </div>
     <!--About Me text-->
-    <div class="container">
-        <p class="lead pb-5">
+    <div class="pt-5 container">
+        <div class="lead pb-5">
             {% for desc in about_text_body %}
             {{desc | safe}}
-            {% endfor %} </p>
+            {% endfor %} </div>
         <div class="pb-2 text-center">
             <p class="lead mt-5">Don't have an account? </p><a class=" text-decoration-none signup" href="{% url 'signupform' %}">Signup here</a>
         </div>
