--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
                                 <h1 class="display-2">Welcome to Curdine</h1>
                                 <div id="content" class="container mt-5">
                                         <p class="lead">We are bringing the popular Canadian dish to you in
-                                                Ireland! It's packet full with all
+                                                Ireland! It's packed full with all
                                                 the things that you love and know well.</p>
                                 </div>
                                 
@@ -29,7 +29,7 @@
                         <img class="img-fluid" src="{% static 'images/Cooking.png' %}" alt="Man cooking">
                 </div>
                 <div class="col-md p-5">
-                    <h2>Are chefs are Ready and waiting</h2>
+                    <h2>Our chefs are Ready and waiting</h2>
                     <p class="lead">See what we have cooked up for you and our twists on the Candian classic!</p>
                     <a href="{% url 'menu' %}" class="text-decoration-none menubtn"> Menu</a>
                 </div>
