Add aria labelling

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
                 <h2 class="text-center mb-4">Contact Info</h2>
                 <ul class="list-group list-group-flush lead">
                     <li class="list-group-item">
-                        <span class="fw-bold">Main Location:</span> 123 Fake St, Springfield IL
+                        <span id="location" class="fw-bold">Main Location:</span> 123 Fake St, Springfield IL
                     </li>
                     <li class="list-group-item">
                         <span class="fw-bold">Phone:</span> (333) 333-3333
@@ -89,7 +89,7 @@
                 </ul>
             </div>
             <div class="col-md">
-                <div id="map" aria-hidden="true">
+                <div id="map" aria-labelledby="location">
                 </div>
             </div>
         </div>
