--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md">
-                        <img class="img-fluid" src="{% static 'images/Cooking.png' %}" alt="Man cooking">
+                        <img class="img-fluid" src="{% static 'images/cooking.png' %}" alt="Man cooking">
                 </div>
                 <div class="col-md p-5">
                     <h2>Our chefs are Ready and waiting</h2>
