--- a/templates/food_item.html
+++ b/templates/food_item.html
@@ -26,6 +26,7 @@
     <div class="col-md-6 mb-3">
       <div class="h-100 p-5 bg-light rounded-3">
         <p class="lead">{{ item.description }}</p>
+        <a class="btn menubtn" href="{% url 'order' %}">Order Now!</a>
       </div>
     </div>
     <!--Food Item Reviews-->
